# ARICO

./: .env.example  .gitignore  README.md  pyproject.toml
api/: server.py
arico/: __init__.py  config.py  main.py
arico/db/: __init__.py  seed.py
arico/graph/: builder.py  nodes.py  routing.py
arico/hitl/: approval.py
arico/models/: __init__.py  alerts.py  campaigns.py  recommendations.py  reports.py  state.py
arico/prompts/: __init__.py  analyst_competitor.txt  analyst_feedback.txt  analyst_inventory.txt  analyst_sales.txt  campaign_system.txt  orchestrator_agent.txt  synthesize_findings.txt
arico/tools/: promotion_tool.py  sql_tool.py  store_lookup.py
data/: alerts.json
diagrams/: agentic_workflow.md  data_flow.md
evals/: dataset.py  evaluators.py  run.py
tests/: test_graph.py
