[project]
name = "arico"
version = "0.1.0"
description = "Autonomous Retail Intervention & Campaign Orchestrator - An agentic LangGraph system for automated retail loss remediation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.4.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=1.0.0",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arico*"]

